Fixed #center alignment

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -22,11 +22,11 @@
 
 /* Images mit Caption und zentriert. Arbeitet mit den Shortcodes */
 .post-content img[src*="#center"] {
-    margin: 0;
+    margin: 0 auto 1rem auto;
 }
 
 .post-content img {
-    margin: 0;
+    margin: 0 auto 1rem auto;
 }
 
 .post-content figure>figcaption {
